# CPP_SDL2_TEMPLATE

./: .gitignore  CMakeLists.txt  README.md
Engine/src/: ImGuiExample.cpp
include/: Game.h  Window.h
src/: Game.cpp  Window.cpp  main.cpp
